tests/test_enum/bad/ambiguous_cases.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1

declaration enumeration F:
  -- Case1

declaration scope A:
  context e content E

scope A:
  definition e equals Case1
```

```catala-test-inline
$ catala Interpret -s A
[ERROR]
This constructor name is ambiguous, it can belong to E or F. Desambiguate it by prefixing it with the enum name.

┌─⯈ tests/test_enum/bad/ambiguous_cases.catala_en:14.23-14.28:
└──┐
14 │   definition e equals Case1
   │                       ‾‾‾‾‾
   └─ Article
#return code 123#
```
